externalization of session-related collections in table designer; mapper for session data to receipt items